# cpp-cmake-simple

./: .gitignore  CMakeLists.txt  README.md  build.sh  main  main.cpp
